#6 조회 성능 개선 scouter 세팅